--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RxDemo</string>
+    <string name="jsonString">""{"code":0,"msg":"成功","result":null}""</string>
 </resources>
