--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">RxDemo</string>
     <string name="jsonString">""{"code":0,"msg":"成功","result":null}""</string>
+    <string name="app_update_latest_version">当前已是最新版本!</string>
+    <string name="app_update_start_download">开始下载</string>
+    <string name="app_update_start_download_hint">可稍后查看下载进度</string>
+    <string name="app_update_start_downloading">正在下载新版本</string>
+    <string name="app_update_download_completed">下载完成</string>
+    <string name="app_update_click_hint">点击进行安装</string>
+    <string name="app_update_download_error">下载出错</string>
+    <string name="app_update_continue_downloading">点击继续下载</string>
+    <string name="app_update_background_downloading">正在后台下载新版本…</string>
+    <string name="app_update_dialog_new">发现新版本%s可以下载啦！</string>
+    <string name="app_update_dialog_new_size">新版本大小：%s</string>
+    <string name="app_update_update">升级</string>
+    <string name="app_update_close">关闭</string>
 </resources>
